доделал блок тарифов

--- a/index.html
+++ b/index.html
@@ -134,15 +134,14 @@
       </article>
 
       <div class="slider-switch  app-reviews-slider__switсh">
-        <i class="slider-switch__item"></i>
         <i class="slider-switch__item  slider-switch__item--active"></i>
+        <i class="slider-switch__item"></i>
         <i class="slider-switch__item"></i>
       </div>
     </section>
 
 
     <section class="shop">
-      <div class="slider">
           <table class="rates">
             <tr>
               <td class="rates__item">
@@ -159,14 +158,14 @@
               </td>
             </tr>
             <tr>
-              <td class="rates__feature">Розовый фильтр</td>
-              <td class="rates__feature">Розовый фильтр</td>
-              <td class="rates__feature">Розовый фильтр</td>
+              <td class="rates__feature  rates__feature--checked">Розовый фильтр</td>
+              <td class="rates__feature  rates__feature--checked">Розовый фильтр</td>
+              <td class="rates__feature  rates__feature--checked">Розовый фильтр</td>
             </tr>
             <tr>
               <td class="rates__feature">Смайлики</td>
-              <td class="rates__feature">Смайлики</td>
-              <td class="rates__feature">Смайлики</td>
+              <td class="rates__feature  rates__feature--cheked">Смайлики</td>
+              <td class="rates__feature  rates__feature--cheked">Смайлики</td>
             </tr>
             <tr>
               <td class="rates__feature">Коментарии</td>
@@ -175,8 +174,6 @@
             </tr>
 
           </table>
-
-        </div>
       <div class="slider-switch  shop__slider-switch">
         <i class="slider-switch__item"></i>
         <i class="slider-switch__item  slider-switch__item--active"></i>
